ExprParser.py
# Generated from Expr.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'function'", "'return'", 
                     "'main'", "','", "'if'", "'then'", "'end'", "'while'", 
                     "'do'", "'write'", "':='", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'='", "'<>'", "'>='", 
                     "'<='", "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "FUNCTION", 
                      "RETURN", "MAIN", "COMMA", "IF", "THEN", "END", "WHILE", 
                      "DO", "WRITE", "ASSIG", "INT", "VAR", "MES", "MENUS", 
                      "MULT", "DIV", "POW", "EQUAL", "DIFF", "GREATER_EQUAL", 
                      "LESS_EQUAL", "GREATER", "LESS", "WS" ]

    RULE_root = 0
    RULE_bloc = 1
    RULE_instr = 2
    RULE_expr = 3
    RULE_comparator = 4
    RULE_param = 5

    ruleNames =  [ "root", "bloc", "instr", "expr", "comparator", "param" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    FUNCTION=3
    RETURN=4
    MAIN=5
    COMMA=6
    IF=7
    THEN=8
    END=9
    WHILE=10
    DO=11
    WRITE=12
    ASSIG=13
    INT=14
    VAR=15
    MES=16
    MENUS=17
    MULT=18
    DIV=19
    POW=20
    EQUAL=21
    DIFF=22
    GREATER_EQUAL=23
    LESS_EQUAL=24
    GREATER=25
    LESS=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloc(self):
            return self.getTypedRuleContext(ExprParser.BlocContext,0)


        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ExprParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.bloc()
            self.state = 13
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.InstrContext)
            else:
                return self.getTypedRuleContext(ExprParser.InstrContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_bloc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloc" ):
                return visitor.visitBloc(self)
            else:
                return visitor.visitChildren(self)




    def bloc(self):

        localctx = ExprParser.BlocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bloc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ExprParser.FUNCTION) | (1 << ExprParser.RETURN) | (1 << ExprParser.MAIN) | (1 << ExprParser.IF) | (1 << ExprParser.WHILE) | (1 << ExprParser.WRITE) | (1 << ExprParser.VAR))) != 0):
                self.state = 15
                self.instr()
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InstrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_instr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MainInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MAIN(self):
            return self.getToken(ExprParser.MAIN, 0)
        def bloc(self):
            return self.getTypedRuleContext(ExprParser.BlocContext,0)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainInstr" ):
                return visitor.visitMainInstr(self)
            else:
                return visitor.visitChildren(self)


    class WriteInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(ExprParser.WRITE, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteInstr" ):
                return visitor.visitWriteInstr(self)
            else:
                return visitor.visitChildren(self)


    class IfInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(ExprParser.IF, 0)
        def comparator(self):
            return self.getTypedRuleContext(ExprParser.ComparatorContext,0)

        def THEN(self):
            return self.getToken(ExprParser.THEN, 0)
        def bloc(self):
            return self.getTypedRuleContext(ExprParser.BlocContext,0)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfInstr" ):
                return visitor.visitIfInstr(self)
            else:
                return visitor.visitChildren(self)


    class VarAssigInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)
        def ASSIG(self):
            return self.getToken(ExprParser.ASSIG, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarAssigInstr" ):
                return visitor.visitVarAssigInstr(self)
            else:
                return visitor.visitChildren(self)


    class ReturnInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(ExprParser.RETURN, 0)
        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnInstr" ):
                return visitor.visitReturnInstr(self)
            else:
                return visitor.visitChildren(self)


    class FunctionInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNCTION(self):
            return self.getToken(ExprParser.FUNCTION, 0)
        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.VAR)
            else:
                return self.getToken(ExprParser.VAR, i)
        def bloc(self):
            return self.getTypedRuleContext(ExprParser.BlocContext,0)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionInstr" ):
                return visitor.visitFunctionInstr(self)
            else:
                return visitor.visitChildren(self)


    class WhileInstrContext(InstrContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.InstrContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(ExprParser.WHILE, 0)
        def comparator(self):
            return self.getTypedRuleContext(ExprParser.ComparatorContext,0)

        def DO(self):
            return self.getToken(ExprParser.DO, 0)
        def bloc(self):
            return self.getTypedRuleContext(ExprParser.BlocContext,0)

        def END(self):
            return self.getToken(ExprParser.END, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileInstr" ):
                return visitor.visitWhileInstr(self)
            else:
                return visitor.visitChildren(self)



    def instr(self):

        localctx = ExprParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instr)
        self._la = 0 # Token type
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ExprParser.VAR]:
                localctx = ExprParser.VarAssigInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 21
                self.match(ExprParser.VAR)
                self.state = 22
                self.match(ExprParser.ASSIG)
                self.state = 23
                self.expr(0)
                pass
            elif token in [ExprParser.WRITE]:
                localctx = ExprParser.WriteInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.match(ExprParser.WRITE)
                self.state = 25
                self.expr(0)
                pass
            elif token in [ExprParser.IF]:
                localctx = ExprParser.IfInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 26
                self.match(ExprParser.IF)
                self.state = 27
                self.comparator()
                self.state = 28
                self.match(ExprParser.THEN)
                self.state = 29
                self.bloc()
                self.state = 30
                self.match(ExprParser.END)
                pass
            elif token in [ExprParser.WHILE]:
                localctx = ExprParser.WhileInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 32
                self.match(ExprParser.WHILE)
                self.state = 33
                self.comparator()
                self.state = 34
                self.match(ExprParser.DO)
                self.state = 35
                self.bloc()
                self.state = 36
                self.match(ExprParser.END)
                pass
            elif token in [ExprParser.FUNCTION]:
                localctx = ExprParser.FunctionInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 38
                self.match(ExprParser.FUNCTION)
                self.state = 39
                self.match(ExprParser.VAR)
                self.state = 40
                self.match(ExprParser.T__0)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ExprParser.VAR:
                    self.state = 41
                    self.match(ExprParser.VAR)
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 47
                self.match(ExprParser.T__1)
                self.state = 48
                self.bloc()
                self.state = 49
                self.match(ExprParser.END)
                pass
            elif token in [ExprParser.MAIN]:
                localctx = ExprParser.MainInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.match(ExprParser.MAIN)
                self.state = 52
                self.bloc()
                self.state = 53
                self.match(ExprParser.END)
                pass
            elif token in [ExprParser.RETURN]:
                localctx = ExprParser.ReturnInstrContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 55
                self.match(ExprParser.RETURN)
                self.state = 56
                self.expr(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ExprParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultDivExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)

        def MULT(self):
            return self.getToken(ExprParser.MULT, 0)
        def DIV(self):
            return self.getToken(ExprParser.DIV, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultDivExpr" ):
                return visitor.visitMultDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class CallInstrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)
        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ParamContext)
            else:
                return self.getTypedRuleContext(ExprParser.ParamContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallInstr" ):
                return visitor.visitCallInstr(self)
            else:
                return visitor.visitChildren(self)


    class TypesExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ExprParser.INT, 0)
        def VAR(self):
            return self.getToken(ExprParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypesExpr" ):
                return visitor.visitTypesExpr(self)
            else:
                return visitor.visitChildren(self)


    class MesMenExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)

        def MES(self):
            return self.getToken(ExprParser.MES, 0)
        def MENUS(self):
            return self.getToken(ExprParser.MENUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMesMenExpr" ):
                return visitor.visitMesMenExpr(self)
            else:
                return visitor.visitChildren(self)


    class PowExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ExprParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)

        def POW(self):
            return self.getToken(ExprParser.POW, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPowExpr" ):
                return visitor.visitPowExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = ExprParser.CallInstrContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 60
                self.match(ExprParser.VAR)
                self.state = 61
                self.match(ExprParser.T__0)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ExprParser.INT or _la==ExprParser.VAR:
                    self.state = 62
                    self.param()
                    self.state = 67
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 68
                self.match(ExprParser.T__1)
                pass

            elif la_ == 2:
                localctx = ExprParser.TypesExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                _la = self._input.LA(1)
                if not(_la==ExprParser.INT or _la==ExprParser.VAR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 81
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.PowExprContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 72
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 73
                        self.match(ExprParser.POW)
                        self.state = 74
                        self.expr(4)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.MultDivExprContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 75
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 76
                        _la = self._input.LA(1)
                        if not(_la==ExprParser.MULT or _la==ExprParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 77
                        self.expr(4)
                        pass

                    elif la_ == 3:
                        localctx = ExprParser.MesMenExprContext(self, ExprParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 78
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 79
                        _la = self._input.LA(1)
                        if not(_la==ExprParser.MES or _la==ExprParser.MENUS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 80
                        self.expr(3)
                        pass

             
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ComparatorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def EQUAL(self):
            return self.getToken(ExprParser.EQUAL, 0)

        def DIFF(self):
            return self.getToken(ExprParser.DIFF, 0)

        def GREATER_EQUAL(self):
            return self.getToken(ExprParser.GREATER_EQUAL, 0)

        def LESS_EQUAL(self):
            return self.getToken(ExprParser.LESS_EQUAL, 0)

        def GREATER(self):
            return self.getToken(ExprParser.GREATER, 0)

        def LESS(self):
            return self.getToken(ExprParser.LESS, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_comparator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparator" ):
                return visitor.visitComparator(self)
            else:
                return visitor.visitChildren(self)




    def comparator(self):

        localctx = ExprParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_comparator)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(ExprParser.EQUAL)
                self.state = 88
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.expr(0)
                self.state = 91
                self.match(ExprParser.DIFF)
                self.state = 92
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(ExprParser.GREATER_EQUAL)
                self.state = 96
                self.expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 98
                self.expr(0)
                self.state = 99
                self.match(ExprParser.LESS_EQUAL)
                self.state = 100
                self.expr(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 102
                self.expr(0)
                self.state = 103
                self.match(ExprParser.GREATER)
                self.state = 104
                self.expr(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.expr(0)
                self.state = 107
                self.match(ExprParser.LESS)
                self.state = 108
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def COMMA(self):
            return self.getToken(ExprParser.COMMA, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = ExprParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.expr(0)
                self.state = 113
                self.match(ExprParser.COMMA)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[3] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 2)
         




